redash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redash
  template:
    metadata:
      labels:
        app: redash
    spec:
      containers:
        - name: server
          image: redash/redash:preview
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 300Mi
          ports:
            - containerPort: 5000
          args: ["server"]
        - name: scheduler
          image: redash/redash:preview
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 250Mi
          args: ["scheduler"]
        - name: worker
          image: redash/redash:preview
          resources:
            requests:
              cpu: 50m
              memory: 300Mi
            limits:
              cpu: 100m
              memory: 400Mi
          imagePullPolicy: Always
          args: ["worker"]
