redash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redash
spec:
  ports:
    - port: 5000
  selector:
    app: redash
