redash/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redash
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`redash.pythondiscord.com`)
    kind: Rule
    services:
    - name: redash
      port: 5000
  tls:
    certResolver: cfresolver
    domains:
    - main: redash.pythondiscord.com
